# critique

./: .gitignore  .pre-commit-config.yaml  DOCUMENT_CRITIQUE_GUIDE.md  Dockerfile  GETTING_STARTED.md  MANIFEST.in  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  USAGE_GUIDE.md  config.yaml  demo_conversation_format.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-example.txt  setup.cfg  test-quality-fix.md  test_data.json  test_document.txt  test_rich_format.txt  tox.ini
.github/workflows/: ci.yml
docker/: entrypoint.sh
docker/config/: production.env
llm_critique/: config.py  main.py
llm_critique/core/: chains.py  conversation.py  models.py  monitoring.py  personas.py  resilience.py  synthesis.py
llm_critique/logging/: setup.py
llm_critique/personas/: caleb_sima.yaml  chris_voss.yaml  elon_musk.yaml  mark_andreessen.yaml  mark_russinovich.yaml  parker_conrad.yaml  persona_template.yaml  ray_dalio.yaml  richard_feynman.yaml  sacha_faust.yaml  satya_nadella.yaml  simon_sinek.yaml  steve_jobs.yaml  sundar_pichai.yaml  warren_buffett.yaml
tests/: conftest.py  test_chains.py  test_conversation_format.py  test_document_critique.py  test_main.py  test_models.py  test_personas.py  test_synthesis.py
